feat: improve wechat upload workflow
